--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
         <meta charset="utf-8">
         <title>Project: Blog</title>
         <style>
-            body { font-style:bold;}
-            h2 { font-size:1.1em;}
-        </style>
+         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
     </head>
     <body>
         <h1>Taoufik's blog</h1>
